// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEST - Add processor used for development should not add a processor without a name 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"name\\" fails because [\\"name\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "name",
    ],
    "source": "body",
  },
}
`;

exports[`TEST - Add processor used for development should not allow an empty body 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"name\\" fails because [\\"name\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "name",
    ],
    "source": "body",
  },
}
`;

exports[`TEST - Add processor used for development should not allow improper address format 1`] = `
Object {
  "error": "Bad Request",
  "message": "\\"address\\" is not allowed",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "address",
    ],
    "source": "body",
  },
}
`;

exports[`TEST - Add processor used for development should not allow scopes that are not an array 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"scopes\\" fails because [\\"scopes\\" must be an array]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "scopes",
    ],
    "source": "body",
  },
}
`;

exports[`TEST - Add processor used for development should verify the type of the name parameter 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"name\\" fails because [\\"name\\" must be a string]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "name",
    ],
    "source": "body",
  },
}
`;

exports[`TEST - Remove processors used for development should not allow empty processor IDs array 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"processorIds\\" fails because [\\"processorIds\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "processorIds",
    ],
    "source": "body",
  },
}
`;

exports[`TEST - Remove processors used for development should not allow missing processors IDS 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"processorIds\\" fails because [\\"processorIds\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "processorIds",
    ],
    "source": "body",
  },
}
`;

exports[`TEST - Remove processors used for development should not allow strings in processors IDs 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"processorIds\\" fails because [\\"processorIds\\" at position 1 fails because [\\"1\\" must be a number]]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "processorIds.1",
    ],
    "source": "body",
  },
}
`;

exports[`Update processor should not allow empty body 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"id\\" fails because [\\"id\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "id",
    ],
    "source": "body",
  },
}
`;

exports[`Update processor should not allow processor without an ID 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"id\\" fails because [\\"id\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "id",
    ],
    "source": "body",
  },
}
`;
